--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+body {
+  font-family: "Open Sans", sans-serif;
+}
 .navigation {
   height: 130px;
   /*background: #ffffff;*/
@@ -737,7 +741,7 @@ ul {
     color: grey;
     font-size: 15px;
     /*padding: 20px 15px 20px 15px;*/
-    line-height: 1.7em;x
+    line-height: 1.7em;
   }
   .body-text-2{
     color: gray;
