--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   z-index: 1;
 
 }
+
 *{
   margin: 0;
   padding: 0;
@@ -33,6 +34,8 @@ body {
   transition: all 0.3s ease-in;
   /*font family*/
   font-weight: bold;
+padding-bottom: 10px;
+padding-top: 10px;
 
 
   /*transformtext*/
@@ -195,6 +198,12 @@ body {
 .nav-ht-fix{
   height: 130px;
 }
+.pane-left{
+  background-color: whitesmoke;
+}
+.pane-right{
+  box-shadow: 0 5px 5px 5px rgba(0,0,0,.3); background-color: white;
+}
 
 /*#nav-toggle {*/
 /*  position: absolute;*/
@@ -252,8 +261,9 @@ ul {
   padding: 0px;
 }
 .footer-section {
-  /*background: #621717;*/
-  background: #610000;
+  background: #621717;
+  /*background: #610000;*/
+  /*background: #949494;*/
   position: relative;
 }
 .footer-cta {
@@ -575,6 +585,7 @@ ul {
   padding: 10px 120px 0px 120px;
 }
 .body-text{
+  background-color: white;
   color: dimgray;
   line-height: 1.7em;
   font-size: 16px;
@@ -582,10 +593,11 @@ ul {
   padding: 40px 9vw 0 9vw;
 }
 .body-text-2{
+  background-color: white;
   color: dimgray;
   line-height: 1.7em;
   font-size: 16px;
-  padding: 40px 9vw 0px 0px;
+  padding: 40px 9vw 0px 40px;
   text-align: justify;
 }
 
@@ -738,12 +750,15 @@ ul {
     padding: 0px 25px 0px 25px;
   }
   .body-text{
+    background-color: white;
     color: grey;
     font-size: 15px;
     /*padding: 20px 15px 20px 15px;*/
     line-height: 1.7em;
   }
   .body-text-2{
+    background-color: white;
+
     color: gray;
     line-height: 1.7em;
     font-size: 15px;
