--- a/style.css
+++ b/style.css
@@ -6,12 +6,17 @@ body {
 .navigation {
   height: 130px;
   /*background: #ffffff;*/
-  background: rgb(248, 249, 250);
+  background: white;
 
   box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
   position: fixed;
   width: 100%;
   z-index: 1;
+
+}
+.hide-nav{
+  visibility: hidden;
+  display: none;
 
 }
 
@@ -34,8 +39,8 @@ body {
   transition: all 0.3s ease-in;
   /*font family*/
   font-weight: bold;
-padding-bottom: 10px;
-padding-top: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 
 
   /*transformtext*/
@@ -427,14 +432,14 @@ ul {
   height: 80vh;
   width: 100%;
 }.main-bg-contact{
-  height: 35vh;
-  width: 100%;
+   height: 35vh;
+   width: 100%;
    overflow: hidden;
    background-image: url("images/contact-us.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
-}
+ }
 .img-overlay{
   background:rgba(0,0,0,0.5);
   width: 100%;
@@ -450,12 +455,12 @@ ul {
 .bg-home:hover{
   transform: scale(1.1);
 }.bg-risk-advisory {
-  height: 80vh;
-  overflow: hidden;
-  transition: 0.5s all ease-in-out;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("images/risk-advisory.jpg") no-repeat center;
-  background-size: cover;
-}
+   height: 80vh;
+   overflow: hidden;
+   transition: 0.5s all ease-in-out;
+   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("images/risk-advisory.jpg") no-repeat center;
+   background-size: cover;
+ }
 .bg-risk-advisory:hover{
   transform: scale(1.1);
 }
@@ -509,12 +514,12 @@ ul {
 .bg-corporate-finance:hover{
   transform: scale(1.1);
 }.bg-auditing-assurance {
-  height: 80vh;
-  overflow: hidden;
-  transition: 0.5s all ease-in-out;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("images/auditing-and-assurance.jpg") no-repeat center;
-  background-size: cover;
-}
+   height: 80vh;
+   overflow: hidden;
+   transition: 0.5s all ease-in-out;
+   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("images/auditing-and-assurance.jpg") no-repeat center;
+   background-size: cover;
+ }
 .bg-auditing-assurance:hover{
   transform: scale(1.1);
 }
@@ -549,12 +554,12 @@ ul {
   transform: scale(0.9);
 }
 .centered {
-    /*font-size: 250%;*/
-    color: white;
-    /*font-family: "Georgia", serif;*/
-    /*position: absolute;*/
-    /*!*top: 45%;*!*/
-    left: 10%;
+  /*font-size: 250%;*/
+  color: white;
+  /*font-family: "Georgia", serif;*/
+  /*position: absolute;*/
+  /*!*top: 45%;*!*/
+  left: 10%;
   margin: 0;
   position: absolute;
   top: 55%;
@@ -737,9 +742,20 @@ ul {
 /*MOBILE CSS*/
 @media screen and (max-width: 798px) {
   .navigation {
-    height: 80px;
+    height: 125px;
   }
+  .nav-ht-fix{
+    height: 125px;
+  }
+  .hide-nav{
+    visibility: visible;
+    display: block;
 
+  }
+  .nav-container{
+    visibility: hidden;
+    display: none;
+  }
 
   .main-text-heading{
     /*font-size: 30px;*/
