--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-body {
-  font-family: "Open Sans", sans-serif;
-}
+/*body {*/
+
+/*}*/
 .navigation {
   height: 130px;
   /*background: #ffffff;*/
@@ -24,6 +24,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+
 }
 .nav-links li a{
   display: flex;
