Title and icon fixes

--- a/style.css
+++ b/style.css
@@ -604,6 +604,7 @@ ul {
   /*position: absolute;*/
   /*!*top: 45%;*!*/
   left: 10%;
+  right: 5%;
   margin: 0;
   position: absolute;
   top: 55%;
